--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "twilio": "^4.5.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
